changed urls again

--- a/builds/views/index.ejs
+++ b/builds/views/index.ejs
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#030303" />
-    <link rel="icon" href="https://studiomusic.herokuapp.com/latest-blueblack.png" type="image/png" />
-    <link rel="apple-touch-icon" href="https://studiomusic.herokuapp.com/latest-blueblack.png" type="image/png" />
+    <link rel="icon" href="https://studiomusic.app/latest-blueblack.png" type="image/png" />
+    <link rel="apple-touch-icon" href="https://studiomusic.app/latest-blueblack.png" type="image/png" />
     <link rel="manifest" href="manifest.json" />
     <title>StudioMusic</title>
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://studiomusic.herokuapp.com">
+    <meta property="og:url" content="https://studiomusic.app">
     <meta property="og:title" content="<%=title%>">
     <meta property="og:description" content="Music For Everyone | StudioMusic">
     <meta property="og:image" content="<%=image%>">
